# pmpp

./: .clangd  main.py  pyproject.toml
Chapter_2/: a.out  setup.py  vec_mul.cu
Chapter_2/extension_cpp/: ops.py
Chapter_2/extension_cpp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Chapter_2/extension_cpp/csrc/: mul_add.cpp
Chapter_3/: mat_vec_mul.cu
Chapter_5/: a.out  matrix_mul_with_tile_size.cu  matrix_mul_with_tile_size_and_boundary_check.cu
docs/: clangd.md
