[project]
name = "programming-massively-parallel-processors"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu126"
default = true
